FreeST/test/Programs/ValidTests/Functional/typeDecl/typeDecl.fst
type T = U

type U = Int

main : T
main = 5
