FreeST/test/Programs/InvalidTests/ParseErrors/dupFunSig/dupFunSig.fst
f : Int
f = 5
f : Int

